# Zygisk-SPOOFER

./: CMakeLists.txt  README.md  config.txt  module.cpp  module.prop  uninstall.sh
.github/workflows/: Sdfg  build.yml
native/: CMakeLists.txt  ssaid_imei_mac_spoofer.cpp
zygisk/: zygisk.hpp
